--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/marine_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/marine_headsets.yml
@@ -41,7 +41,7 @@
   - type: RMCHeadset
     radioTextIncrease: 3
   - type: GrantSquadLeaderTracker
-    defaultRole: CMSquadLeader
+    defaultRole: CMCommandingOfficer
     trackableRoles:
     - CMCommandingOfficer
     - CMExecutiveOfficer
@@ -122,7 +122,7 @@
   - type: RMCHeadset
     radioTextIncrease: 3
   - type: GrantSquadLeaderTracker
-    defaultRole: CMSquadLeader
+    defaultRole: CMCommandingOfficer
     trackableRoles:
     - CMCommandingOfficer
     - CMExecutiveOfficer
@@ -203,7 +203,7 @@
   - type: RMCHeadset
     radioTextIncrease: 3
   - type: GrantSquadLeaderTracker
-    defaultRole: CMSquadLeader
+    defaultRole: CMCommandingOfficer
     trackableRoles:
     - CMCommandingOfficer
     - CMExecutiveOfficer
@@ -284,7 +284,7 @@
   - type: RMCHeadset
     radioTextIncrease: 3
   - type: GrantSquadLeaderTracker
-    defaultRole: CMSquadLeader
+    defaultRole: CMCommandingOfficer
     trackableRoles:
     - CMCommandingOfficer
     - CMExecutiveOfficer
@@ -380,7 +380,7 @@
   - type: RMCHeadset
     radioTextIncrease: 2
   - type: GrantSquadLeaderTracker
-    defaultRole: CMSquadLeader
+    defaultRole: CMCommandingOfficer
     trackableRoles:
     - CMCommandingOfficer
     - CMExecutiveOfficer
@@ -461,7 +461,7 @@
   - type: RMCHeadset
     radioTextIncrease: 2
   - type: GrantSquadLeaderTracker
-    defaultRole: CMSquadLeader
+    defaultRole: CMCommandingOfficer
     trackableRoles:
     - CMCommandingOfficer
     - CMExecutiveOfficer
