--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/provost_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/provost_headsets.yml
@@ -20,11 +20,11 @@
   - type: RMCHeadset
     radioTextIncrease: 3
   - type: GrantSquadLeaderTracker
-    defaultRole: CMProvostTeamLeader
-    trackableRoles:
-    - CMProvostMarshal
-    - CMProvostDeputyMarshal
-    - CMProvostChiefInspector
-    - CMProvostInspector
-    - CMProvostTeamLeader
-    - CMProvostAdvisor
+    defaultMode: ProvostTeamLeader
+    trackerModes:
+    - ProvostMarshal
+    - ProvostDeputyMarshal
+    - ProvostChiefInspector
+    - ProvostInspector
+    - ProvostTeamLeader
+    - ProvostAdvisor
