--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/spp_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/spp_headsets.yml
@@ -94,9 +94,9 @@
   id: RMCHeadsetSPPAbstract
   components:
   - type: GrantSquadLeaderTracker
-    defaultRole: RMCSPPLeader
-    trackableRoles:
-    - RMCSPPLeader
+    defaultMode: LeaderSpp
+    trackerModes:
+    - LeaderSpp
   - type: GrantTacMapAlert
 
 - type: entity
