Try fix test fails

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/support_technician.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/support_technician.yml
@@ -45,6 +45,7 @@
   parent: RMCGearForeconBase
   id: RMCGearForeconSupportTech
   equipment:
+    outerClothing: RMCOuterClothingExternalWebbing
     eyes: RMCWeldingGoggles
     back: RMCSatchelMarineLogisticsBig
     gloves: CMHandsInsulated
