--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/synth.yml
@@ -7,6 +7,7 @@
   ranks:
     RMCRankMasterSergeant: [ ]
   startingGear: RMCGearSynthetic
+  dummyStartingGear: RMCGearSyntheticEquipped
   icon: "RMCJobIconSynth"
   requireAdminNotify: true
   joinNotifyCrew: true
@@ -14,6 +15,7 @@
   supervisors: cm-job-supervisors-co
   accessGroups:
   - ShipMasterAccess
+  - Synth
   minimapIcon:
     sprite: _RMC14/Interface/map_blips.rsi
     state: synth
@@ -60,6 +62,11 @@
 
 - type: startingGear
   id: RMCGearSynthetic
+  equipment:
+    id: RMCIDCardSynth
+
+- type: startingGear
+  id: RMCGearSyntheticEquipped
   equipment:
     jumpsuit: RMCJumpsuitSynthetic
     gloves: CMHandsInsulated
