--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/base_xeno.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/base_xeno.yml
@@ -187,6 +187,7 @@
         - BulletImpassable
   - type: Xeno
   - type: XenoRegen
+  - type: XenoStateVisuals
   - type: UserInterface
     interfaces:
       enum.XenoEvolutionUIKey.Key:
